--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <!--- intro --->
                 <div class="intro">
                     <!--- intro --->
-                    <img src="img/avatar-boy.png" alt="Folio.">
+                    <img src="avatar-boy.png" alt="Folio.">
                     <!--- info -->
                     <h1>Aditya Sharma</h1>
                     <span>I'm a <span class="info-text">Front-End developer</span> </span>
@@ -105,7 +105,7 @@
                 <div class="row">
                     <div class="about-img padd-15">
                         <!-- avatar img-->
-                        <img src="img/girlavatar.png" alt="">
+                        <img src="girlavatar.png" alt="">
                     </div>
                     <div class="about-content padd-15">
                         <div class="rounded">
@@ -322,7 +322,7 @@
                         <div class="inner">
                             <div class="thumb">
                                 <a href="#"><span class="category">Reviews</span></a>
-                                <a href="#"><img src="img/1.svg" alt=""></a>
+                                <a href="#"><img src="1.svg" alt=""></a>
                             </div>
                             <div class="details">
                                 <h3 class="title"><a href="#">Best App Develop Tool for Your Projects</a></h3>
@@ -338,7 +338,7 @@
                         <div class="inner">
                             <div class="thumb">
                                 <a href="#"><span class="category">Tutorial</span></a>
-                                <a href="#"><img src="img/2.svg" alt=""></a>
+                                <a href="#"><img src="2.svg" alt=""></a>
                             </div>
                             <div class="details">
                                 <h3 class="title"><a href="#">Common Misconcption About PAYMENT</a></h3>
@@ -354,7 +354,7 @@
                         <div class="inner">
                             <div class="thumb">
                                 <a href="#"><span class="category">Business</span></a>
-                                <a href="#"><img src="img/1.svg" alt=""></a>
+                                <a href="#"><img src="1.svg" alt=""></a>
                             </div>
                             <div class="details">
                                 <h3 class="title"><a href="#">3 Things to know about startup business</a></h3>
