--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <li class="nav-item">
                         <a href="#blogs" class="nav-link">Projects</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-it em">
                         <a href="#contact" class="nav-link">Contact</a>
                     </li>
                 </ul>
@@ -73,10 +73,10 @@
                     <span>I'm a <span class="info-text">Front-End developer</span> </span>
                     <!-- social media-->
                     <ul class="social-icons">
-                        <li><a href="#"><i class="lni lni-instagram-original"></i></a></li>
+                        <li><a href="https://www.instagram.com/adityax_s/"><i class="lni lni-instagram-original"></i></a></li>
                         <li><a href="#"><i class="lni lni-twitter-original"></i></a></li>
-                        <li><a href="#"><i class="lni lni-facebook-original"></i></a></li>
-                        <li><a href="#"><i class="lni lni-linkedin"></i></a></li>
+                        <li><a href="https://www.facebook.com/profile.php?id=100034932499900"><i class="lni lni-facebook-original"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/aditya-sharma-b34731192/"><i class="lni lni-linkedin"></i></a></li>
                         <li><a href="#"><i class="lni lni-pinterest"></i></a></li>
                     </ul>
 
@@ -86,7 +86,7 @@
                     </div>
                     <!-- scroll down mouse wheel -->
                     <div class="scroll-down">
-                        <a href="#" class="mouse-wrapper">
+                        <a href="#about" class="mouse-wrapper">
                             <span>Scroll Down</span>
                             <span class="mouse">
                                 <span class="wheel"></span>
@@ -96,7 +96,6 @@
                 </div>
             </div>
         </section>
-
         <!--=============== About ===============-->
         <section class="about section" id="about">
             <div class="container">
@@ -105,7 +104,7 @@
                 <div class="row">
                     <div class="about-img padd-15">
                         <!-- avatar img-->
-                        <img src="girlavatar.png" alt="">
+                        <img src="about.gif" alt="">
                     </div>
                     <div class="about-content padd-15">
                         <div class="rounded">
@@ -152,7 +151,7 @@
                                             <h4>UI/UX</h4>
                                             <div class="progress">
                                                 <div class="progress-in"
-                                                    style="width: 95%; background:rgb(243, 14, 14)">
+                                                    style="width: 95%; background:#4DE69E">
                                                     <div class="skill-percent">82%</div>
                                                 </div>
                                             </div>
@@ -170,7 +169,6 @@
                                     </div>
                                 </div>
                             </div>
-
                         </div>
                     </div>
                 </div>
@@ -396,7 +394,7 @@
                         <span class="font-size-1"></span>
                         <span class="font-size-2"></span>
                         <span class="font-size-3 active"></span>
-                        <span class="font-size--4"></span>
+                        <span class="font-size-4"></span>
                     </div>
                     <h3>Aa</h3>
                 </div>
